working microservice as standalone project

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,23 +29,23 @@ jobs:
       - store_artifacts:
          path: coverage
 
-  #build-and-push-image:
-   #  docker:
-    #   - image: google/cloud-sdk
+  build-and-push-image:
+     docker:
+       - image: google/cloud-sdk
 
-     #steps:
-      # - checkout
-       #- attach_workspace:
-        #   at: .
+     steps:
+       - checkout
+       - attach_workspace:
+           at: .
 
-       #- run: echo ${GCLOUD_SERVICE_KEY} | base64 --decode -i > ${HOME}/gcloud-service-key.json
-       #- setup_remote_docker:
-       #    version: 18.06.0-ce
-       #- run: gcloud auth activate-service-account --key-file ${HOME}/gcloud-service-key.json
-       #- run: gcloud auth configure-docker
-       #- run: gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
-       #- run: docker build -t gcr.io/${GOOGLE_PROJECT_ID}/${IMAGE_NAME}:${IMAGE_VERSION} .
-       #- run: docker push gcr.io/${GOOGLE_PROJECT_ID}/${IMAGE_NAME}:${IMAGE_VERSION}
+       - run: echo ${GCLOUD_SERVICE_KEY} | base64 --decode -i > ${HOME}/gcloud-service-key.json
+       - setup_remote_docker:
+           version: 18.06.0-ce
+       - run: gcloud auth activate-service-account --key-file ${HOME}/gcloud-service-key.json
+       - run: gcloud auth configure-docker
+       - run: gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
+       - run: docker build -t gcr.io/${GOOGLE_PROJECT_ID}/${IMAGE_NAME}:${IMAGE_VERSION} .
+       - run: docker push gcr.io/${GOOGLE_PROJECT_ID}/${IMAGE_NAME}:${IMAGE_VERSION}
        
   #deploy:
    #  working_directory: ~/fivestarrating
