--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,51 +1,112 @@
 version: 2
 jobs:
-  test:
+  build:
     working_directory: ~/fivestarrating
-
     docker:
-        - image: circleci/node:7.10
-        - image: circleci/mongo:3
-
+         - image: circleci/node:7.10
     steps:
       - checkout
-
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "package.json" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
-
-      - run: npm install
-      
+      - run:
+          name: Install dependencies
+          command: npm install
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
+      - persist_to_workspace:
+          root: .
+          paths:
+            - build
+  test:
+    # Remove if parallelism is not desired
+    parallelism: 2
+    
+    docker:
+        - image: circleci/node:7.10
+        - image: circleci/mongo:3
+    
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
       - run:
-          name: Unit testing
+          name: Run tests in parallel
           command: npm run test:coverage
 
+      - store_test_results:
+          path: build/test-results/test
       - store_artifacts:
-         path: coverage
+          path: build/test-results/test
+          when: always
+      - store_artifacts:
+          path: build/reports/codecoverage/test/html
+          when: always
 
-  build-and-push-image:
-     docker:
-       - image: google/cloud-sdk
+workflows:
+  version: 2
+  workflow:
+    jobs:
+    - build
+    - test:
+        requires:
+          - build
 
-     steps:
-       - checkout
-       - attach_workspace:
-           at: .
+# version: 2
+# jobs:
+#   test:
+#     working_directory: ~/fivestarrating
 
-       - run: echo ${GCLOUD_SERVICE_KEY} | base64 --decode -i > ${HOME}/gcloud-service-key.json
-       - setup_remote_docker:
-           version: 18.06.0-ce
-       - run: gcloud auth activate-service-account --key-file ${HOME}/gcloud-service-key.json
-       - run: gcloud auth configure-docker
-       - run: gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
-       - run: docker build -t gcr.io/${GOOGLE_PROJECT_ID}/${IMAGE_NAME}:${IMAGE_VERSION} .
-       - run: docker push gcr.io/${GOOGLE_PROJECT_ID}/${IMAGE_NAME}:${IMAGE_VERSION}
+#     docker:
+#         - image: circleci/node:7.10
+#         - image: circleci/mongo:3
+
+#     steps:
+#       - checkout
+
+#       - restore_cache:
+#           keys:
+#             - v1-dependencies-{{ checksum "package.json" }}
+#             # fallback to using the latest cache if no exact match is found
+#             - v1-dependencies-
+
+#       - run: 
+#           name: Installing dependencies  
+#           command: npm install
+      
+#       - save_cache:
+#           paths:
+#             - node_modules
+#           key: v1-dependencies-{{ checksum "package.json" }}
+      
+#       - run:
+#           name: Unit testing
+#           command: npm run test:coverage
+
+#       - store_artifacts:
+#          path: coverage
+
+#   build-and-push-image:
+#      docker:
+#        - image: google/cloud-sdk
+
+#      steps:
+#        - checkout
+#        - attach_workspace:
+#            at: .
+
+#        - run: echo ${GCLOUD_SERVICE_KEY} | base64 --decode -i > ${HOME}/gcloud-service-key.json
+#        - setup_remote_docker:
+#            version: 18.06.0-ce
+#        - run: gcloud auth activate-service-account --key-file ${HOME}/gcloud-service-key.json
+#        - run: gcloud auth configure-docker
+#        - run: gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
+#        - run: docker build -t gcr.io/${GOOGLE_PROJECT_ID}/${IMAGE_NAME}:${IMAGE_VERSION} .
+#        - run: docker push gcr.io/${GOOGLE_PROJECT_ID}/${IMAGE_NAME}:${IMAGE_VERSION}
        
   #deploy:
    #  working_directory: ~/fivestarrating
@@ -66,18 +127,18 @@ jobs:
        #- run:
         #   name: deploy to GKE
          #  command: kubectl apply -f ./fivestarrating.yaml
-workflows:
-  version: 2
-  test-build-deploy:
-    jobs:
-      - test:
-          filters:
-            branches:
-              ignore:
-                #- master
-      - build-and-push-image:
-          requires:
-            - test
-      - deploy:
-          requires:
-            - build-and-push-image
+# workflows:
+#   version: 2
+#   test-build-deploy:
+#     jobs:
+#       - test:
+#           filters:
+#             branches:
+#               ignore:
+#                 #- master
+#       - build-and-push-image:
+#           requires:
+#             - test
+#       - deploy:
+#           requires:
+#             - build-and-push-image
