--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,10 +27,13 @@ jobs:
       
       - run:
           name: Unit testing
-          command: npm run test:coverage
+          command: |
+              mkdir test-results
+              npm run test:coverage
+              cp ~/fivestarratingservice/coverage/clover.xml ~/fivestarratingservice/test-results/
       
       - store_test_results:
-          path: coverage/
+          path: test-results/
 
 workflows:
   version: 2
