--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "nodemon": "^2.0.1",
     "nyc": "^14.1.1",
     "sinon": "^8.0.1"
+  },
+  "jest": {
+    "reporters": ["default", "jest-junit"]
   }
 }
