--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@hapi/joi": "^16.1.8",
     "@opencensus/exporter-jaeger": "0.0.19",
     "grpc": "^1.22.2",
+    "jest-junit": "^10.0.0",
     "mongoose": "^5.7.13",
     "pino": "^5.6.2"
   },
@@ -38,6 +39,6 @@
     "sinon": "^8.0.1"
   },
   "jest": {
-    "reporters": ["default", "jest-junit"]
+    "reporters": [ "default", "jest-junit" ]
   }
 }
