--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "test:coverage": "istanbul cover"
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -38,9 +38,6 @@
     "nyc": "^14.1.1"
   },
   "jest": {
-    "reporters": [
-      "default",
-      "jest-junit"
-    ]
+    "reporters": [ "default", "jest-junit" ]
   }
 }
