--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,16 +53,19 @@ jobs:
       - checkout
       - attach_workspace:
           at: .
+      - run: 
+          name: get gcloud service key
+          command: echo ${GCLOUD_SERVICE_KEY} | base64 --decode -i > ${HOME}/gcloud-service-key.json
       - setup_remote_docker:
           version: 18.06.0-ce
       - run: 
-          name: Authenticate gcloud
+          name: authenticate gcloud
           command: gcloud auth activate-service-account --key-file ${HOME}/gcloud-service-key.json
       - run: 
-          name: Authenticate docker
+          name: authenticate docker
           command: gcloud auth configure-docker
       - run: 
-          name: Set gcloud project
+          name: set gcloud project
           command: gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
       - run: 
           name: build docker image
