--- a/kubernetes-manifests/fivestarratingservice.yaml
+++ b/kubernetes-manifests/fivestarratingservice.yaml
@@ -28,7 +28,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: server
-        image: fivestarratingservice
+        image: gcr.io/projektxy/fivestarratingservice:1.0.0
         ports:
         - name: grpc
           containerPort: 3333
