--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@google-cloud/trace-agent": "4.0.1",
     "@grpc/proto-loader": "^0.1.0",
     "@hapi/joi": "^16.1.8",
+    "@opencensus/exporter-stackdriver": "0.0.19",
+    "@opencensus/nodejs": "0.0.19",
     "grpc": "^1.22.2",
     "mongoose": "^5.7.13",
     "pino": "^5.6.2"
